--- a/web/app/ponthe/templates/dashboard.html
+++ b/web/app/ponthe/templates/dashboard.html
@@ -1,4 +1,5 @@
-{% extends "layout/layout.html" %}
+{% extends "common/layout.html" %}
+{% from "common/macros.html" import gallery_element %}
 
 {% block content %}
 <div id="content-top-border" class="container"></div>
@@ -83,13 +84,7 @@
                     <div class="col-md-12 portfolio-group no-padding">
                         {% for file in files %}
                             <div class="col-md-3 portfolio-item margin-bottom-40 design">
-                                <div>
-                                    <figure>
-                                        <a href="{{ url_for('uploads', file_path=file.file_path) }}">
-                                            <img src="{{ file | thumb }}">
-                                        </a>
-                                    </figure>
-                                </div>
+                                {{ gallery_element(file) }}
                                 <div class="no-border">
                                     <button class="btn btn-danger margin-vert-20" type="button" data-toggle="modal" data-target="#deletePendingModal-{{ file.slug }}">Supprimer</button>
                                 </div>
@@ -150,13 +145,7 @@
                 <div class="col-md-12 portfolio-group no-padding">
                     {% for file in files %}
                         <div class="col-md-3 portfolio-item margin-bottom-40 design no-border">
-                            <div>
-                                <figure>
-                                    <a href="{{ url_for('uploads', file_path=file.file_path) }}">
-                                        <img src="{{ file | thumb }}">
-                                    </a>
-                                </figure>
-                            </div>
+                            {{ gallery_element(file) }}
                             <div>
                                 <button class="btn btn-danger margin-vert-20" type="button" data-toggle="modal" data-target="#deleteModal-{{ file.slug }}">Supprimer</button>
                             </div>
