--- a/web/app/ponthe/templates/upload.html
+++ b/web/app/ponthe/templates/upload.html
@@ -1,4 +1,6 @@
-{% extends "layout/layout.html" %}
+{% extends "common/layout.html" %}
+{% from "common/macros.html" import uppy_script %}
+
 {% block content %}
 <div id="content-top-border" class="container"></div>
 <div id="content">
@@ -15,42 +17,5 @@
     </div>
 </div>
 <div id="content-bottom-border" class="container"></div>
-<script src="https://transloadit.edgly.net/releases/uppy/v0.25.5/dist/uppy.min.js"></script>
-<script>
-    const uppyTwo = new Uppy.Core({
-        debug: true,
-        autoProceed: false,
-        {% if not current_user.admin %}
-        restrictions: {
-            maxFileSize: 1000000000,
-            maxNumberOfFiles: 10,
-            minNumberOfFiles: 1,
-            allowedFileTypes: ['image/*', 'video/*']
-        }
-        {% endif %}
-    });
-    uppyTwo
-      .use(Uppy.Dashboard, {
-          inline: true,
-          target: '#UppyDashboard',
-          replaceTargetContent: true,
-          showProgressDetails: true,
-          {% if not current_user.admin %}
-          note: "Images et vidéos seulement, 1–10 fichiers, jusqu'à 1 GB",
-          {% endif %}
-          height: 470,
-          metaFields: [
-              { id: 'name', name: 'Nom', placeholder: 'Match de hand' },
-              { id: 'caption', name: 'Légende', placeholder: "Description du contenu"}
-          ],
-          locale: {
-              strings: {
-                  dropPaste: 'Glisse tes fichiers ici ou %{browse}',
-                  browse: 'parcours'
-              }
-          },
-          browserBackButtonClose: true
-      })
-      .use(Uppy.Tus, { endpoint: '{{ url_for('private.file-upload', gallery_slug=gallery.slug) }}' });
-</script>
+{{ uppy_script(gallery.slug, inline="true") }}
 {% endblock %}
