--- a/web/app/ponthe/templates/login.html
+++ b/web/app/ponthe/templates/login.html
@@ -9,6 +9,10 @@
                 <div class="login-header margin-bottom-30">
                     <h2>Connecte-toi !</h2>
                 </div>
+                <div class="argin-bottom-20">
+                    <a type="button" class="btn btn-primary" href="/cas/login">Utiliser mon compte DSI</a>
+                </div>
+                <span class="center">OU</span>
                 <div class="input-group margin-bottom-20">
                     <span class="input-group-addon">
                         <i class="fa fa-user"></i>
@@ -36,12 +40,12 @@
                     {% endwith %}
                 {% endfor %}
                 <div class="row">
-                    <div class="col-md-6">
+                    <div class="col-sm-6">
                         <label class="checkbox">
                             <input type="checkbox"> Rester connecté
                         </label>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-sm-6">
                         <button class="btn btn-primary pull-right" type="submit">Se connecter</button>
                     </div>
                 </div>
