--- a/web/app/ponthe/templates/email/create_account.html
+++ b/web/app/ponthe/templates/email/create_account.html
@@ -567,7 +567,7 @@
                                       <p style="margin: 10px 0;padding: 0;mso-line-height-rule: exactly;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;color: #808080;font-family: Helvetica;font-size: 16px;line-height: 150%;text-align: justify;">
                                           Bienvenue {{ firstname }} !<br>
                                           <br>
-                                          Le club d'audiovisuel des Ponts est heureux de t'inviter à rejoindre son site internet <a href="https://ponthe.enpc.org" style="font-weight: bold;letter-spacing: normal;line-height: 100%;text-align: center;text-decoration: none;mso-line-height-rule: exactly;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">ponthe.enpc.org</a>.
+                                          Le club d'audiovisuel des Ponts est heureux de t'inviter à rejoindre son site internet <a href="https://ponthe-testing.enpc.org" style="font-weight: bold;letter-spacing: normal;line-height: 100%;text-align: center;text-decoration: none;mso-line-height-rule: exactly;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">ponthe-testing.enpc.org</a>.
                                           Tu pourras y visiter les galeries photos et vidéos couvrant les événements de la vie associative de l'école et même y partager les tiennes !
                                           Alors n'attends plus et connecte-toi avec tes identifiants :<br>
                                           Email : {{  email }}<br>
