--- a/web/app/ponthe/templates/cgu.html
+++ b/web/app/ponthe/templates/cgu.html
@@ -7,7 +7,7 @@
         <div class="row margin-vert-30">
             <div class="col-md-12">
                 <h1>Conditions générales d'utilisation du site Galeries Ponthé</h1>
-                <h3> sur <a href="https://ponthe.enpc.org">ponthe.enpc.org</a></h3>
+                <h3> sur <a href="https://ponthe-testing.enpc.org">ponthe-testing.enpc.org</a></h3>
 
                 <br>
                 <br>
