--- a/web/app/ponthe/templates/email/reset.html
+++ b/web/app/ponthe/templates/email/reset.html
@@ -518,7 +518,7 @@
                                 <tbody>
                                   <tr>
                                     <td class="mcnImageContent" valign="top" style="padding-right: 9px;padding-left: 9px;padding-top: 0;padding-bottom: 0;text-align: center;mso-line-height-rule: exactly;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">
-                                      <img align="center" alt="" src="https://ponthe.enpc.org/assets/img/logo.png" width="150" style="max-width: 305px;padding-bottom: 0;display: inline !important;vertical-align: bottom;border: 0;height: auto;outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;"
+                                      <img align="center" alt="" src="https://ponthe-testing.enpc.org/assets/img/logo.png" width="150" style="max-width: 305px;padding-bottom: 0;display: inline !important;vertical-align: bottom;border: 0;height: auto;outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;"
                                         class="mcnImage">
                                     </td>
                                   </tr>
@@ -618,7 +618,7 @@
                                     <td valign="top" class="mcnTextContent" style="padding-top: 0;padding-right: 18px;padding-bottom: 9px;padding-left: 18px;mso-line-height-rule: exactly;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;word-break: break-word;color: #808080;font-family: Helvetica;font-size: 16px;line-height: 150%;text-align: left;">
                                       <p style="margin: 10px 0;padding: 0;mso-line-height-rule: exactly;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;color: #808080;font-family: Helvetica;font-size: 16px;line-height: 150%;text-align: justify;">
                                         En cas de besoin, tu peux contacter le Ponthé par notre mailing list <a href="mailto:ponthe@liste.enpc.fr" style="font-weight: bold;letter-spacing: normal;line-height: 100%;text-align: center;text-decoration: none;mso-line-height-rule: exactly;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">ponthe@liste.enpc.fr</a>.<br>
-                                        <img style="margin: 20px 140px; max-width: 500px;" src="https://ponthe.enpc.org/assets/img/the_team/020.png">
+                                        <img style="margin: 20px 140px; max-width: 500px;" src="https://ponthe-testing.enpc.org/assets/img/the_team/020.png">
                                       </p>
                                     </td>
                                   </tr>
