add /v1 prefix to v1 assets urls

--- a/web/app/ponthe/templates/common/layout.html
+++ b/web/app/ponthe/templates/common/layout.html
@@ -8,13 +8,13 @@
         <meta name="author" content="Ponthé">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 
-        <link rel="icon" type="image/png" href="/assets/img/logo.png">
-        <link rel="stylesheet" href="/assets/css/bootstrap.css">
+        <link rel="icon" type="image/png" href="/v1/assets/img/logo.png">
+        <link rel="stylesheet" href="/v1/assets/css/bootstrap.css">
         <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-        <link rel="stylesheet" href="/assets/css/animate.css" rel="stylesheet">
-        <link rel="stylesheet" href="/assets/css/nexus.css" rel="stylesheet">
-        <link rel="stylesheet" href="/assets/css/responsive.css" rel="stylesheet">
-        <link rel="stylesheet" href="/assets/css/custom.css" rel="stylesheet">
+        <link rel="stylesheet" href="/v1/assets/css/animate.css" rel="stylesheet">
+        <link rel="stylesheet" href="/v1/assets/css/nexus.css" rel="stylesheet">
+        <link rel="stylesheet" href="/v1/assets/css/responsive.css" rel="stylesheet">
+        <link rel="stylesheet" href="/v1/assets/css/custom.css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,300" rel="stylesheet" type="text/css">
         <link href="https://fonts.googleapis.com/css?family=PT+Sans" type="text/css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Roboto:400,300" rel="stylesheet" type="text/css">
@@ -123,13 +123,13 @@
 
         <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-        <script type="text/javascript" src="/assets/js/bootstrap.min.js"></script>
-        <script type="text/javascript" src="/assets/js/scripts.js"></script>
-        <script type="text/javascript" src="/assets/js/jquery.isotope.js"></script>
-        <script type="text/javascript" src="/assets/js/jquery.slicknav.js"></script>
-        <script type="text/javascript" src="/assets/js/jquery.visible.js"></script>
-        <script type="text/javascript" src="/assets/js/jquery.sticky.js"></script>
-        <script type="text/javascript" src="/assets/js/slimbox2.js"></script>
-        <script type="text/javascript" src="/assets/js/modernizr.custom.js"></script>
+        <script type="text/javascript" src="/v1/assets/js/bootstrap.min.js"></script>
+        <script type="text/javascript" src="/v1/assets/js/scripts.js"></script>
+        <script type="text/javascript" src="/v1/assets/js/jquery.isotope.js"></script>
+        <script type="text/javascript" src="/v1/assets/js/jquery.slicknav.js"></script>
+        <script type="text/javascript" src="/v1/assets/js/jquery.visible.js"></script>
+        <script type="text/javascript" src="/v1/assets/js/jquery.sticky.js"></script>
+        <script type="text/javascript" src="/v1/assets/js/slimbox2.js"></script>
+        <script type="text/javascript" src="/v1/assets/js/modernizr.custom.js"></script>
     </body>
 </html>
