--- a/web/app/ponthe/templates/moderation.html
+++ b/web/app/ponthe/templates/moderation.html
@@ -35,7 +35,7 @@
                         <div class="col-md-3 portfolio-item margin-bottom-40 design">
                             <div>
                                 <figure>
-                                    <a href="{{ url_for('uploads', file_path=file.file_path) }}">
+                                    <a href="{{ url_for('private.uploads', file_path=file.file_path) }}">
                                         <img src="{{ file | thumb }}">
                                     </a>
                                 </figure>
