--- a/web/src/less/bootstrap/bootstrap.css
+++ b/web/src/less/bootstrap/bootstrap.css
@@ -2367,8 +2367,8 @@ input[type="button"].btn-block {
 }
 @font-face {
   font-family: 'Glyphicons Halflings';
-  src: url('../../assets/fonts/glyphicons-halflings-regular.eot');
-  src: url('../../assets/fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), url('../../assets/fonts/glyphicons-halflings-regular.woff') format('woff'), url('../../assets/fonts/glyphicons-halflings-regular.ttf') format('truetype'), url('../../assets/fonts/glyphicons-halflings-regular.svg#glyphicons_halflingsregular') format('svg');
+  src: url('/v1/assets/fonts/glyphicons-halflings-regular.eot');
+  src: url('/v1/assets/fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), url('/v1/assets/fonts/glyphicons-halflings-regular.woff') format('woff'), url('/v1/assets/fonts/glyphicons-halflings-regular.ttf') format('truetype'), url('/v1/assets/fonts/glyphicons-halflings-regular.svg#glyphicons_halflingsregular') format('svg');
 }
 .glyphicon {
   position: relative;
