add /v1 in CAS system

--- a/web/app/ponthe/templates/login.html
+++ b/web/app/ponthe/templates/login.html
@@ -10,7 +10,7 @@
                     <h2>Connecte-toi !</h2>
                 </div>
                 <div class="argin-bottom-20">
-                    <a type="button" class="btn btn-primary" href="/cas/login">Utiliser mon compte DSI</a>
+                    <a type="button" class="btn btn-primary" href="/v1/cas/login">Utiliser mon compte DSI</a>
                 </div>
                 <span class="center">OU</span>
                 <div class="input-group margin-bottom-20">
